--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 49f0b560
+	base = 06e51064
 	trim = canopen_core
-	trimbase = 
+	trimbase = 49f0b560
