--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = a8ed4140
+	base = a8b7b7c3
 	trim = canopen_utils
-	trimbase = 
+	trimbase = a8ed4140
