--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 6243c07c
+	base = 7a5498f8
 	trim = canopen_base_driver
-	trimbase = 
+	trimbase = 6243c07c
