--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 0fd2922c
+	base = cc47ae00
 	trim = canopen
-	trimbase = 
+	trimbase = 0fd2922c
