--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 7294f685
+	base = f3fd5da3
 	trim = canopen_interfaces
-	trimbase = 
+	trimbase = 7294f685
