--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = cbfbb8c3
+	base = 764af17e
 	trim = canopen_fake_slaves
-	trimbase = 
+	trimbase = cbfbb8c3
