--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 8b868298
+	base = e91b6812
 	trim = lely_core_libraries
-	trimbase = 
+	trimbase = 8b868298
