--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 6c36b8df
+	base = 52783dba
 	trim = canopen_tests
-	trimbase = 
+	trimbase = 6c36b8df
