--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 3183119f
+	base = 5606ff43
 	trim = canopen_proxy_driver
-	trimbase = 
+	trimbase = 3183119f
