--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 9e5c895e
+	base = 620f5446
 	trim = canopen_ros2_control
-	trimbase = 
+	trimbase = 9e5c895e
