--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 9333e6eb
+	base = 22d80e64
 	trim = canopen_ros2_controllers
-	trimbase = 
+	trimbase = 9333e6eb
