--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = d5509db9
+	base = ec7d68a9
 	trim = canopen_402_driver
-	trimbase = 
+	trimbase = d5509db9
