--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = aeadf75c
+	base = cf748b80
 	trim = canopen_master_driver
-	trimbase = 
+	trimbase = aeadf75c
