--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = da1214aa
+	base = e89c71d1
 	trim = canopen_core
-	trimbase = 
+	trimbase = da1214aa
