--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 1311518e
+	base = 788a53f9
 	trim = canopen_utils
-	trimbase = 
+	trimbase = 1311518e
