--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = fb313396
+	base = ffa6d9c4
 	trim = canopen_base_driver
-	trimbase = 
+	trimbase = fb313396
