--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 4d3b0f7c
+	base = 4d28f5df
 	trim = canopen
-	trimbase = 
+	trimbase = 4d3b0f7c
