--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = ce27a1e4
+	base = f0b29f9a
 	trim = canopen_interfaces
-	trimbase = 
+	trimbase = ce27a1e4
