--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 4ff9e4d5
+	base = e826e833
 	trim = canopen_fake_slaves
-	trimbase = 
+	trimbase = 4ff9e4d5
