--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 9de01df0
+	base = 31c261b0
 	trim = lely_core_libraries
-	trimbase = 
+	trimbase = 9de01df0
