--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = a6a8bcaf
+	base = 1a122e44
 	trim = canopen_tests
-	trimbase = 
+	trimbase = a6a8bcaf
