--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 0ef00256
+	base = 5f43f00e
 	trim = canopen_proxy_driver
-	trimbase = 
+	trimbase = 0ef00256
