--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 26ad08e1
+	base = 257f5b2f
 	trim = canopen_ros2_control
-	trimbase = 
+	trimbase = 26ad08e1
