--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 8bd91fdc
+	base = dd3d0575
 	trim = canopen_ros2_controllers
-	trimbase = 
+	trimbase = 8bd91fdc
