--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 053f1b8e
+	base = 1b566218
 	trim = canopen_402_driver
-	trimbase = 
+	trimbase = 053f1b8e
