--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 40f59de9
-	base = 4bb0b146
+	base = 2d851091
 	trim = canopen_master_driver
-	trimbase = 
+	trimbase = 4bb0b146
